--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @-moz-document url-prefix("http://4pda.ru/forum/"), url-prefix("https://4pda.ru/forum/") {
 /* Author - Haron Prime
 License WTFPL © 2017 http://www.wtfpl.net/
-Version 0.7.11 */
+Version 0.7.12 */
 
 /* Header */
 #ipbwrapper #userlinks {
@@ -51,7 +51,7 @@ body {
 body, .user_home a, #navstrip, .formsubtitle, .input-warn, .input-green, .input-checkbox, input, textarea, select, table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .forumdesc, .forumdesc a:link, .forumdesc a:visited, .forumdesc a:active, table.ipbtable, tr.ipbtable, td.ipbtable, .usercp_menu, .usercp_menu_out, .popmenubutton-new, .pp-header, .pp-tiny-text, .popupmenu-item-last, .pp-taboff, .pp-tabshaded, .desc, h4, h3, .darkrow1, .lastaction, .pp-datebox em, .quotetop, .quotemain, .ipbtable td, .hidetop, .hidemain, .popupmenu-category, .post-edit-reason, .codemain, .sqlmain, .htmlmain, .codetop, .sqltop, .htmltop,  span[style$="color:#000000"], span[style="color:black"], .resized-linked-image, #loading-layer-inner, form, .ed-wrap .ed-panel-title, .darkrow3, #thread_content .out_message .msg, .navbar-title, .navbar-title > strong, .newslink, .newslink td, .smalltext, .attach-messagediv, .pa_text h2, .foruminfo .foruminfo_news, .foruminfo_news:hover, span[style="font-weight:bold;color:#222222;"], .post-block > .block-title, .post-block > .block-body, .footer-nav .f-note, #ipbwrapper > div, .u-note::after, .ddbp-spec-row, .content, .footer, .maintitle td, .input-ok-content {
     color: #ccc !important;
 }
-#events_wrapper, .ed-wrap .ed-p-textarea, .ed-wrap .ed-textarea {
+#events_wrapper, .ed-wrap .ed-p-textarea, .ed-wrap .ed-textarea, textarea#message {
     background-color: #303030 !important;
     background: #303030 !important;
 }
