--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @-moz-document url-prefix("http://4pda.ru/forum/"), url-prefix("https://4pda.ru/forum/") {
 /* Author - Haron Prime
-License WTFPL © 2017 http://www.wtfpl.net/
-Version 0.7.13 */
+License WTFPL -  http://www.wtfpl.net/
+Version 0.7.14 */
 
 /* Header */
 #ipbwrapper #userlinks {
@@ -55,13 +55,13 @@ body, .user_home a, #navstrip, .formsubtitle, .input-warn, .input-green, .input-
     background-color: #303030 !important;
     background: #303030 !important;
 }
-.dipt, .dipt:after, .dipt .dfrml + .dfrmr, .dipt .dfrmrbrd {
+.dipt, .dipt:after, .dipt .dfrml, .dipt .dfrml + .dfrmr, .dipt .dfrmrbrd {
     background-color: #303030 !important;
     background: #303030 !important;
     color: #ccc !important;
-    box-shadow: 0 1px 0 0 #959595 inset !important;
-    -webkit-box-shadow: 0 1px 0 0 #959595 inset !important;
-    -moz-box-shadow: 0 1px 0 0 #959595 inset !important;
+/*  box-shadow: 0 1px 0 0 #555 inset !important; */
+    -webkit-box-shadow: 0 1px 0 0 #555 inset !important;
+    -moz-box-shadow: 0 1px 0 0 #555 inset !important;
 }
 .codemain, .sqlmain, .htmlmain {
     font-family: Consolas, "Courier New", Verdana, Arial, Ubuntu, serif !important;
